meta titles and discriptions added

--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-   <title>TERAXO | BLOGS</title>
-    <meta name="description" content="">
+   <title>Teraxo Adhesives Blog – Tips, Insights & Industrial Bonding Solutions</title>
+    <meta name="description" content="Read the Teraxo blog for expert advice, industry insights, and tips on industrial adhesives, fast-curing bonds, and specialty bonding solutions.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
