--- a/views/company-overview.ejs
+++ b/views/company-overview.ejs
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | COMPANY OVERVIEW</title>
-    <meta name="description" content="">
+    <title>Industrial Adhesive Wholesale Manufacturer in India</title>
+    <meta name="description" content="Wholesale manufacturer of industrial and cyanoacrylate adhesives for diverse applications, including plastic, metal, rubber, wood, ceramics, and automotive use. Connect with us.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
