--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | CONTACT US</title>
-    <meta name="description" content="">
+    <title>Contact Teraxo – Industrial Adhesive Solutions & Support</title>
+    <meta name="description" content="Get in touch with Teraxo for product inquiries, support, or orders. Our team is ready to assist with industrial and specialty adhesive solutions.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
