--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | HOME</title>
-    <meta name="description" content="">
+    <title>Teraxo Adhesives | Premium Industrial & Cyanoacrylate Bonding Solutions</title>
+    <meta name="description" content="High-strength cyanoacrylate and industrial adhesives for plastic, metal, wood, rubber, and more. Explore reliable bonding solutions for manufacturing and general use.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
