--- a/views/industry-automotive.ejs
+++ b/views/industry-automotive.ejs
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | AUTOMOTIVE ADHESIVES & REPAIR SOLUTIONS</title>
-    <meta name="description" content="Teraxo provides specialized adhesives for automotive repair, maintenance, and manufacturing. High-strength, vibration-resistant bonding solutions for vehicle components.">
+    <title>Adhesives for Automotive Repair – High-Strength Bonding Solutions | Teraxo</title>
+    <meta name="description" content="Durable, fast-curing adhesives designed for automotive repair, offering strong bonds for trims, panels, plastics, and maintenance work.
+">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
