--- a/views/industry-furniture.ejs
+++ b/views/industry-furniture.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | FURNITURE & WOODWORKING ADHESIVES</title>
-    <meta name="description" content="Teraxo provides specialized wood adhesives for furniture manufacturing, carpentry, and woodworking. Fast-curing, strong-bonding solutions for professional results.">
+    <title>Specialized Wood Adhesives for Professional Woodworking – Teraxo</title>
+    <meta name="description" content="Explore professional-grade wood adhesives engineered for strong, durable bonds in woodworking, furniture production, and interior applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
