--- a/views/industry-interiors.ejs
+++ b/views/industry-interiors.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | INTERIORS & MODULAR KITCHEN ADHESIVES</title>
-    <meta name="description" content="Teraxo provides specialized adhesives for interior contractors and modular kitchen manufacturers. Fast-curing, strong-bonding solutions for PVC panels, acrylic sheets, and kitchen assembly.">
+    <title>Specialized Adhesives for Interior Contractors & Kitchen Manufacturers – Teraxo</title>
+    <meta name="description" content="High-performance adhesives engineered for interior contractors and kitchen manufacturers, delivering fast curing, strong bonds, and reliable results for precision installation.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
