--- a/views/industry-packaging.ejs
+++ b/views/industry-packaging.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | PACKAGING ADHESIVES & BONDING SOLUTIONS</title>
-    <meta name="description" content="Teraxo provides specialized adhesives for packaging manufacturing, carton sealing, box assembly, and flexible packaging. High-speed, food-safe bonding solutions for packaging industry.">
+    <title>Adhesives for Packaging Manufacturing – Fast, Durable Bonding | Teraxo</title>
+    <meta name="description" content="Engineered adhesives for packaging manufacturing, delivering fast curing, strong bonds, and reliable performance for cartons, labels, and high-speed production lines.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
