--- a/views/industry-pvc.ejs
+++ b/views/industry-pvc.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | PVC & UPVC FABRICATION ADHESIVES</title>
-    <meta name="description" content="Teraxo provides specialized adhesives for PVC and UPVC fabrication, window manufacturing, pipe joining, and plastic fabrication. High-strength, waterproof bonding solutions.">
+    <title>Adhesives for PVC & UPVC Fabrication – Strong, Reliable Bonding | Teraxo</title>
+    <meta name="description" content="High-performance adhesives formulated for PVC and UPVC fabrication, providing strong, durable, fast-curing bonds for doors, windows, panels, and assemblies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
