--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="template-version" content="1.0.3">
-    <title>TERAXO | PRODUCTS</title>
-    <meta name="description" content="">
+    <title> Buy Industrial Adhesives Online | Teraxo Cyanoacrylate & Specialty Bonds</title>
+    <meta name="description" content=" Browse high-performance instant adhesives, wood bonds, and industrial bonding products. Fast-curing, reliable, and suitable for professional and consumer applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
