--- a/views/why-choose.ejs
+++ b/views/why-choose.ejs
@@ -5,8 +5,10 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="template-version" content="1.0.3">
-    <title>TERAXO | WHY CHOOSE TERAXO</title>
-<meta name="description" content="">
+    <title>Teraxo Industrial Adhesives – Why Choose Us for Strong, Fast‑Curing Bonds
+</title>
+<meta name="description" content="Discover Teraxo’s industrial adhesive advantages: high‑performance instant bonds, fast curing for increased productivity, and reliable strength across footwear, woodworking, automotive, and more.
+">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
