--- a/views/productDetails.ejs
+++ b/views/productDetails.ejs
@@ -7,8 +7,19 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="template-version" content="1.0.3">
-  <title>TERAXO | PRODUCT DETAILS</title>
-  <meta name="description" content="">
+  
+  <title>
+    <%= product && product.seoTitle 
+          ? product.seoTitle 
+          : (product && product.title 
+                ? product.title + ' | TERAXO' 
+                : 'TERAXO | PRODUCT DETAILS') 
+    %>
+  </title>
+  <meta name="description" content="<%= product && product.seoDescription ? product.seoDescription : (product && product.description ? product.description : '') %>">
+  <% if (product && product.seoKeywords && product.seoKeywords.length > 0) { %>
+    <meta name="keywords" content="<%= product.seoKeywords.join(', ') %>">
+  <% } %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico in the root directory -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/teraxo/logo.png">
