--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1003,7 +1003,7 @@
                         <% }); %>
                     <% } else { %>
                         <div class="swiper-slide">
-                            <p class="text-center text-white">No products available</p>
+                            <p class="text-center text-dark">No products available</p>
                         </div>
                     <% } %>
 
