--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -405,7 +405,7 @@
                     <div class="rs-postbox-details-thumb">
                         <img class="blog-details-img" 
                              src="/uploads/<%= blog.images && blog.images.length > 0 ? blog.images[0] : 'default.jpg' %>" 
-                             alt="<%= blog.title %>">
+                             alt="<%= blog.title %>" style="max-width: 100%; height: auto; object-fit: contain;">
                     </div>
 
                     <!-- Meta -->
